fix(styles.css): fix card content overflow

--- a/styles.css
+++ b/styles.css
@@ -29,23 +29,22 @@
   /* nice nav bar style */
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  width: 100%;
-  padding: 0 10px;
-  background-color: #fff;
-  box-shadow: 0 0 10px #000;
+  width: 10%;
+  margin: 0 auto;
 }
 
 .cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  padding-top: 5%;
 }
 
 .card {
   max-width: 400px;
-  height: 40vh;
+  height: fit-content;
   border-radius: 10px;
   border: 3px solid #7c7c7c;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
